better organization for test data